--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table style="background-color: yellow;" border="1px solid black">
+		<caption>Student Details</caption>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>		
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
